<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#092AEC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="258dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/titulo"
        android:textColor="#C9EE5C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/botonBlue"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="120dp"
        android:checked="false"
        android:onClick="iniciarBluetooth"
        android:textOff="@string/textoBof"
        android:textOn="@string/textoBon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/botonLed"
        android:layout_width="274dp"
        android:layout_height="47dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="44dp"
        android:onClick="ToggLed"
        android:textOff="@string/textoLof"
        android:textOn="@string/textoLon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonBlue" />

    <Button
        android:id="@+id/buscar"
        android:layout_width="238dp"
        android:layout_height="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="64dp"
        android:onClick="Buscar"
        android:text="@string/textobus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonLed" />

    <TextView
        android:id="@+id/dispoSelec"
        android:layout_width="238dp"
        android:layout_height="56dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="44dp"
        android:clickable="false"
        android:text="@string/mostrarText"
        android:textColor="#C9EE5C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscar"
        app:layout_constraintVertical_bias="0.206" />
</androidx.constraintlayout.widget.ConstraintLayout>