<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DispositivoSincro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/texto3"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/background_dark"
                android:text="@string/tituloD"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="18sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <Button
                android:id="@+id/boton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:text="@string/mostrar"
                android:textColor="@color/colorPrimary"
                android:onClick="Mostrar"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ListView
                android:id="@+id/lista_disp_vinculados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/texto4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_dark"
                android:text="@string/tituloE"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <Button
                android:id="@+id/boton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:text="@string/buscarD"
                android:textColor="@color/colorPrimary"
                android:onClick="BuscarDisp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/lista_disp_encontrados"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>